# AudioTransVox

./: Cargo.toml  README.md
src/: audio_capture.rs  audio_transcribe.rs  main.rs
