[package]
name = "audio_trans_vox"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
cpal = "0.15.2"
num-traits = "0.2"
ctrlc = "3.4.5"
tokio = { version = "1", features = ["full"] }
whisper-rs = "0.12.0"
ringbuffer = "0.15.0"
samplerate = "0.2.4"
reqwest = { version = "0.11", features = ["blocking"] }
hound = "3.4.0"
candle-core = { version = "0.8.2", features = ["default"] }
candle-transformers = { version = "0.8.2", features = ["default"] }
candle-nn = { version = "0.8.2", features = ["default"] }
tokenizers = "0.21"
anyhow = "1.0"